--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -46,6 +46,9 @@
                     <li>
                         <a href="#about">About</a>
                     </li>
+                    <li>
+                        <a href="#login">Login</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
