Implemented client-side csrf protection, login, and a bit of server-side support

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -39,7 +39,7 @@
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-left">
                     <li>
                         <a href="#random-recipe">Random Recipe</a>
                     </li>
@@ -47,16 +47,22 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#login">Login</a>
+                        <a href="#add-recipe">Add a recipe</a>
                     </li>
                 </ul>
+
+                <!-- account part -->
+                <div data-ng-controller="AccountCtrl as accountCtrl">
+                  <div ng-show="accountCtrl.loggedIn" ng-include="'partials/account_menu.html'"></div>
+                  <div ng-show="!accountCtrl.loggedIn" ng-include="'partials/login_form.html'"></div>
+                </div>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container -->
     </nav>
 
-    <div ng-view></div>
+    <div data-ng-view></div>
 
     <footer>
         <div class="container">
